--- a/api/pom.xml
+++ b/api/pom.xml
@@ -60,6 +60,11 @@
 				
 		<!-- End OpenMRS core -->
 		
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20160212</version>
+		</dependency>
 	</dependencies>
 	
 	<build>
