--- a/omod/pom.xml
+++ b/omod/pom.xml
@@ -79,6 +79,28 @@
 			<type>gem</type>
 		</dependency>
 
+		<dependency>
+			<groupId>org.openmrs.module</groupId>
+			<artifactId>uiframework-api</artifactId>
+			<version>3.4</version>
+			<type>jar</type>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.openmrs.module</groupId>
+			<artifactId>emrapi-api</artifactId>
+			<type>jar</type>
+			<scope>provided</scope>
+			<version>1.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.openmrs.module</groupId>
+			<artifactId>appui-omod</artifactId>
+			<type>jar</type>
+			<scope>provided</scope>
+			<version>1.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -227,24 +249,6 @@
 						</configuration>
 					</execution>
 				</executions>
-			</plugin>
-
-			<plugin>
-				<groupId>de.saumya.mojo</groupId>
-				<artifactId>gem-maven-plugin</artifactId>
-				<extensions>true</extensions>
-				<executions>
-					<execution>
-						<goals>
-							<goal>exec</goal>
-						</goals>
-						<phase>generate-resources</phase>
-					</execution>
-				</executions>
-				<configuration>
-					<jrubyVersion>1.7.10</jrubyVersion>
-					<execArgs>${project.build.directory}/rubygems/bin/compass compile ${basedir}/src/main/compass</execArgs>
-				</configuration>
 			</plugin>
 		</plugins>
 	</build>
